header fixed + z-index added

--- a/css/style.css
+++ b/css/style.css
@@ -87,7 +87,9 @@ hr.short{
 header {
     position: fixed;
     left: 50%;
+    padding-left: 20px;
     transform: translateX(-50%);
+    z-index: 10;
     line-height: 80px;
     background-color: #264d9c;
     text-transform: uppercase;
